--- a/La-Recursion/.project
+++ b/La-Recursion/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>UnitCinverter</name>
+	<name>La-Recursion</name>
 	<comment></comment>
 	<projects>
 	</projects>
